# aura-link

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
aura_link/: __main__.py  chat.py  cli.py  command_exec.py  connection.py  credentials.py  file_ops.py  secret_filter.py  watcher.py
